--- a/styles1.css
+++ b/styles1.css
@@ -8,7 +8,7 @@ body {
   background-color: #f5f6fa;
   color: #333;
 }
-
+/* Header Strip*/
 header {
   background-color: #1E2836;
   color: white;
@@ -16,8 +16,10 @@ header {
   display: flex;
   gap: 20px;
   align-items: center;
+  width: 100%;
 }
 
+/* Rest of body*/
 main {
   display: grid;
   grid-template-columns: 20% 80%;
@@ -27,6 +29,7 @@ main {
   margin: 20px 20px;
 }
 
+/*Sidebar style*/
 .sidebar {
   background-color: #fff;
   padding: 20px;
@@ -44,6 +47,7 @@ main {
   font-weight: bold;
 }
 
+/*Logout button on sidebar*/
 #lgnav {
   border-top: 2px solid #ddd;
 }
@@ -53,16 +57,19 @@ main {
   border-radius: 6px;
 }
 
+/*Dolphin img*/
 .logo {
   height: 40px;
 }
 
+/*Logout img*/
 #logout{
   height: 20px;
   width: 20px;
   margin-right: 8px;
 }
 
+/*Add User button to take you to new user creation*/
 #AddUserBtn {
   background: #6a55f2;
   color: white;
@@ -80,6 +87,21 @@ main {
   background: #5945d8;
 }
 
+/*Save Button style*/
+#SaveBtn {
+  background: #6a55f2;
+  color: white;
+  border: none;
+  padding: 10px 18px;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 14px;
+  transition: 0.2s;
+  float: right;
+  margin-right: 20px;
+}
+
+/* User List table style*/
 #userList {
   margin-top: 50px;
   align-items: center;
@@ -102,4 +124,18 @@ main {
 #userList th {
   background-color: #1E2836;
   color: white;
+}
+
+#formGrid {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  height: auto;
+}
+
+#formGrid div {
+  margin: 10px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
